--- a/ConverseStore_Java6/src/main/resources/templates/user/sanphamCT.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/sanphamCT.html
@@ -84,21 +84,28 @@
 							<!--                                 </select> -->
 							<!--                            </form> -->
 							<!--                         </div> -->
+							<form method="post">
 							<div class="row mt-4 mb-4">
 								<span class="col-md-3 size1">Size:</span>
 								<div class="col-md-9">
-								<select  class="form-select select-custom">
-                                    <option th:each="s: ${sizs}" th:text="${s.sizeNumber}">37</option>
+								
+								<select th:name="size" class="form-select select-custom">
+                                    <option th:each="s: ${sizs}" th:value="${s.sizeID}" th:text="${s.sizeID}">37</option>
                                 </select>
+                                
 									</div>
 							</div>
 							
 							<div class="row mt-4 mb-4">
 								<span class="col-md-3 size1">Màu:</span>
+								
 								<div class="col-md-9">
-								<select  class="form-select select-custom">
-                                    <option th:each="co: ${cols}" th:text="${co.colorName}">37</option>
+								
+								<select th:name="color" class="form-select select-custom">
+                                    <option th:each="co: ${cols}" th:value="${co.colorID}" th:text="${co.colorID}">37</option>
                                 </select>
+                                
+                                
 									</div>
 							</div>
 							
@@ -125,9 +132,10 @@
 								</div>
 
 								<div class="mt-4 mb-4" > 
-									<button th:formaction="@{/addtocart}" type="submit"
+									<button th:formaction="@{|/addtocart/${productitem.productID}|}" type="submit"
 										class="btn btn-themvaogio">Thêm vào giỏ</button>
 								</div>
+								</form>
 								<!-- The Modal Start-->
 								<div class="modal fade" id="myModal">
 									<div class="modal-dialog modal-xl">
