[ECLIPSE] Lọc sản phẩm theo loại

--- a/ConverseStore_Java6/src/main/resources/templates/user/sanpham.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/sanpham.html
@@ -51,8 +51,8 @@
 										<div class="danhmuc-sp">
 
 											<ul>
-												<li><a href="#">Cao</a></li>
-												<li><a href="#">Thấp</a></li>
+												<li><a th:href="@{|/sanpham?productType=true|}">Cao</a></li>
+												<li><a th:href="@{|/sanpham?productType=false|}">Thấp</a></li>
 											</ul>
 										</div>
 									</div>
