Thêm sửa xóa ncc km

--- a/ConverseStore_Java6/src/main/resources/templates/user/sanpham.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/sanpham.html
@@ -6,6 +6,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <title>CONVERSE || SẢN PHẨM</title>
 </head>
 
@@ -142,7 +143,7 @@
 										</a>
 										<div class="row d-flex justify-content-center">
                                         <a th:href="@{|/sanpham/chitietsp/${p.productID}|}" class="btn product-btn"><i class="ti-shopping-cart"></i> Chi tiết</a>
-                                        <a th:href="@{'/addyeuthich/'+ ${p.productID}}" class="btn product-btn"><i class="ti-heart"></i> Yêu thích</a>
+                                        <button type="submit" th:attr="ng-click=@{|favo.add(${p.productID})|}"  class="btn product-btn"><i class="ti-heart"></i> Yêu thích</button>
                                     </div>
 									</div>
 								</div>
