--- a/ConverseStore_Java6/src/main/resources/templates/layout/layout.html
+++ b/ConverseStore_Java6/src/main/resources/templates/layout/layout.html
@@ -24,10 +24,12 @@
 <link th:href="@{/assets/css/mycss.css}" rel="stylesheet" />
 <link th:href="@{/assets/font/themify-icons/themify-icons.css}"
 	rel="stylesheet" />
+	
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 
 </head>
 
-<body>
+<body ng-app="favorite-app" ng-controller="favorite-ctrl">
 
 
 
@@ -38,7 +40,7 @@
 
 	<div th:replace="~{/layout/footer :: footer}"></div>
 
-
+	<script src="/assets/js/favorite.js"></script>
 	<script
 		src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
