--- a/ConverseStore_Java6/src/main/resources/templates/user/yeuthich.html
+++ b/ConverseStore_Java6/src/main/resources/templates/user/yeuthich.html
@@ -18,9 +18,10 @@
         crossorigin="anonymous" />
     <link th:href="@{/css/mycss.css}" rel="stylesheet" />
     <link th:href="@{/font/themify-icons/themify-icons.css}" rel="stylesheet" />
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
 </head>
 
-<body>
+<body ng-app="favorite-app" ng-controller="favorite-ctrl">
     <!-- main about start -->
     <div>
 	    <div class="container mt-5 mb-5">
@@ -35,28 +36,10 @@
 	                </tr>
 	            </thead>
 	            <tbody>
-	                <tr>
-	                    <td>1</td>
-	                    <td>Converse Renew Canvas</td>
-	                    <td>2023-7-10</td>
-	                    <td class="d-flex justify-content-around" style="font-size: 27px;">
-	                        <a class="color-black"><i class="ti-pencil"></i></a>
-	                        <a class="color-black"><i class="ti-trash"></i></a>
-	                    </td>
-	                </tr>
-	                <tr>
-	                    <td>1</td>
-	                    <td>Converse Renew Canvas</td>
-	                    <td>2023-7-10</td>
-	                    <td class="d-flex justify-content-around" style="font-size: 27px;">
-	                        <a class="color-black"><i class="ti-pencil"></i></a>
-	                        <a class="color-black"><i class="ti-trash"></i></a>
-	                    </td>
-	                </tr>
-	                <tr>
-	                    <td>1</td>
-	                    <td>Converse Renew Canvas</td>
-	                    <td>2023-7-10</td>
+	                <tr th:each="favo: ${fa}">
+	                    <td>[[${favo.favoriteID}]]</td>
+	                    <td>[[${favo.Products.productName}]]</td>
+	                    <td>[[${favo.dateLike}]]</td>
 	                    <td class="d-flex justify-content-around" style="font-size: 27px;">
 	                        <a class="color-black"><i class="ti-pencil"></i></a>
 	                        <a class="color-black"><i class="ti-trash"></i></a>
@@ -68,7 +51,7 @@
     </div>
     <!-- main about end -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
+	<script src="/assets/js/favorite.js"></script>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
